# sistema_rpz_v3_0_0_0

./: .gitignore  app.py  check_db.py  clean_db.py  env.example  global_vars.py  install.bat  install.sh  maintenance.bat  optimize_db.py  pandas_stub.py  requirements-dev.txt  requirements.txt  setup_service.bat  start.bat  verify_files.bat
config/: config.ini  config_production.ini  feature_flags.py  google_credentials.json.example  pyproject.toml
controller/: carga_horaria_calculator.py  data.py  decorators.py  google_integration.py  google_sheets.py  infractions.py  infractions_data.py  route_utils.py  utils.py
docs/: ARQUITETURA_SISTEMA.md  CRITERIOS_FECHAMENTO_PONTO.md  Criterios_especiais.md  DEPLOY_GITHUB_RENDER.md  DOCUMENTACAO_SISTEMA_COMPILADA.md  GOOGLE_FORMS_SETUP.md  GOOGLE_SETUP.md  INDICE_DOCUMENTACAO.md  INSTALACAO.md  MANUAL_USUARIO_CARGA_HORARIA_ESPECIAL.md  README.md  RELATORIO_FINAL_LIMPEZA.md  RESUMO_EXECUTIVO.md  SISTEMA_LOGIN_ANALISE.md
docs/scripts/: README.md
file_templates/: excel_template.xlsx  excel_template_fecham.xlsx
model/: db_model.py
scripts/: README_LIMPEZA.md  cleanup_helper.py  cleanup_orchestrator.py  configurar_criterio_teste.py  migration_carga_horaria_especial.py  migration_closure_block_classifications.sql  rollback_helper.py  run_migration_closure_classifications.py  validar_migracao_simples.py  validation_helper.py
static/css/: login.css  (+8 more)
templates/: check_updates.html  check_updates_fechamento.html  closure.html  closure_analysis.html  closure_insert_data_page.html  closure_parameters.html  closure_report_modal.html  closure_reports.html  company_config.html  config_employees.html  config_employees_administrative.html  config_employees_mechanics.html  config_main.html  confirm_dayoff.html  download_report.html  error_403.html  former_motorists.html  home.html  infractions_details.html  infractions_page.html  jornada_dinamica_old.html  load_files_closure.html  load_files_track.html  login.html  main.html  motorist_config.html  motorist_details.html  not_allowed.html  redirect.html  track.html  track_analysis.html  track_insert_data_page.html  track_reports.html  truck_config.html  user_config.html
tools/: backup.bat  check_dependencies.bat  fix_encoding.bat
view/: closure_routes.py  common_routes.py  config_routes.py  parameters_route.py  public_routes.py  ssma_routes.py  track_routes.py  validation_service.py
(+54 files in other folders)
